fix: Style responsive CSS based on Mobile First strategy.
Fixed the issues with responsive design on the home page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,16 +106,18 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  padding: 10px;
   background-color: #3397DB;
+  box-sizing: border-box;
   align-items: center;
+  margin-bottom: 1em;
 }
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0;
 }
 .filter-options select {
   background-color: white;
@@ -124,9 +126,16 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: 100%;
+  margin: 10px 0;
+}
+
+@media (min-width: 420px) {
+  .filter-options select {
+    width: 180px;
+    margin-right: 10px;
+  }
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -134,18 +143,25 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding-left: 0;
+  padding: 0 10px;
+  box-sizing: border-box;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 10px;
   text-align: left;
-  width: 270px;
+  width: 100%;
+  margin-bottom: 1em;
+  box-sizing: border-box;
+  display: inline-block;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -180,6 +196,27 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+@media (min-width: 360px) {
+  #restaurants-list li a {
+    max-width: 160px;
+  }
+}
+
+@media (min-width: 560px) {
+  #restaurants-list li {
+    max-width: calc((100% - 20px)/2);
+    padding: 1em;
+  }
+}
+
+@media (min-width: 768px) {
+  #restaurants-list li {
+    max-width: 270px;
+  }
 }
 
 /* ====================== Restaurant Details ====================== */
